--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,16 @@
             <version>5.9.1</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.etsntesla.it</groupId>
+            <artifactId>RunShellCommand</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.33</version>
+        </dependency>
 
 
     </dependencies>
