kraj sestog videa

--- a/pom.xml
+++ b/pom.xml
@@ -58,14 +58,15 @@
                         <includes>
                             <include>**/MySqlTest1.java</include>
                             <include>**/MySqlTest2.java</include>
-                        </includes>
-                        <excludes>
-                            <exclude>**/BaseMySqlTest.java</exclude>
-                        </excludes>
-                    </configuration>
-                </plugin>
-            </plugins>
-        </pluginManagement>
-    </build>
+                            <include>**/MySqlTest3.java</include>
+                           </includes>
+                           <excludes>
+                               <exclude>**/BaseMySqlTest.java</exclude>
+                           </excludes>
+                       </configuration>
+                   </plugin>
+               </plugins>
+           </pluginManagement>
+       </build>
 
-</project>
+   </project>
