--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,24 @@
                            </excludes>
                        </configuration>
                    </plugin>
+                    <plugin>
+                        <groupId>org.flywaydb</groupId>
+                        <artifactId>flyway-maven-plugin</artifactId>
+                        <version>10.10.0</version>
+                        <configuration>
+                            <configFiles>
+                                <configFile>src/main/resources/application.properties</configFile>
+                            </configFiles>
+                        </configuration>
+                        <dependencies>
+                            <dependency>
+                                <groupId>org.flywaydb</groupId>
+                                <artifactId>flyway-mysql</artifactId>
+                                <version>10.10.0</version>
+                            </dependency>
+
+                        </dependencies>
+                    </plugin>
                </plugins>
            </pluginManagement>
        </build>
